<resources>
    <string name="app_name">IMC</string>
    <string name="msgInicio">IMC</string>
    <string name="calcularBt">calcular</string>
    <string name="pesoHint">Peso(Kg)</string>
    <string name="alturaHint">Altura(M)</string>
    <string name="abaixoPeso">Você está abaixo do Peso Ideal\n</string>
    <string name="pesoIdeal">Você está no do Peso Ideal\n</string>
    <string name="acimaPeso">Você está acima do Peso Ideal\n</string>
    <string name="obesidade1">Você está na Obesidade Grau 1 (Leve)\n</string>
    <string name="obesidade2">Você está na Obesidade Grau 2 (Severa)\n</string>
    <string name="obesidade3">Você está na Obesidade Grau 3 (Mórbida)\n</string>
    <string name="calcPesoIdealCima">O Peso Ideal para a sua altura é entre:\n\n</string>
    <string name="calcPesoIdealBaixo">O Peso Ideal para a sua altura é entre:\n\n</string>
    <string name="e">Kg\ne\n</string>
    <string name="kg">Kg</string>
    <string name="genBtMasculino">Masculino</string>
    <string name="genBtFeminino">Feminino</string>
    <string name="peso_ideal">Peso Ideal</string>
    <string name="falta">"\nFaltam\n"</string>
    <string name="para">\nPara o Peso Ideal</string>
    <string name="msgToastMain">Digite o Peso e Altura</string>
    <string name="mainTitulo">Cálculo do IMC</string>
    <string name="seletorGenCMP">Feminino</string>
    <string name="constKg">Kg</string>
    <string name="constHistEditData">"Data: "</string>
    <string name="constHistEditPeso">"Peso: "</string>
    <string name="constHistEditKg">"Kg  "</string>
    <string name="constHistEditAltura">"Altura: "</string>
    <string name="constHistEditM">M</string>
    <string name="constHistEditGenero">"Gênero: "</string>
    <string name="constHistEditObservacoes">Observações:</string>
    <string name="historicoTitulo">Histórico</string>
    <string name="historicoEditTitulo">Histórico Edit</string>
    <string name="historicoEditTituloCMP">Histórico Edit</string>
    <string name="historicoTituloCMP">Histórico</string>
    <string name="msgToastHistoricoBusca">\"Registros em: "</string>
    <string name="btnVoltarHistoricoEdit">Voltar</string>
    <string name="btnSalvarHistoricoEdit">Salvar</string>
    <string name="constHistEditHora">"Hora: "</string>
    <string name="constHistEditObservacoesHint">exemplo: Dieta\nou\nexemplo: Exercício</string>
    <string name="notifyAumento">"Seu peso aumentou "</string>
    <string name="notifyDiminui">"Seu peso diminuiu "</string>
    <string name="boasVindas">Bem Vindo ao Cálculo do IMC</string>
    <string name="descricaoBoasVindas">Toque aqui para acompanhar o seu Histórico</string>
    <string name="tituloNotificacao">Alteração de Peso</string>
</resources>