<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
    android:background="@color/verde"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        app:titleTextColor="@color/verde"
        android:textStyle="bold"
        android:background="#2C2B2B"
        android:elevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="#4A4A4A"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4A4A4A"
                android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/constHistEditData"
                style="@style/edHist" />
            <TextView
                android:id="@+id/tvDataEdit"
                style="@style/edHist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Campo Data"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#4A4A4A"
                android:orientation="horizontal">
                <TextView
                    style="@style/edHist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/constHistEditPeso"/>
                <TextView
                    android:id="@+id/tvPesoEdit"
                    style="@style/edHist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Peso"/>
                <TextView
                    style="@style/edHist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/constHistEditKg"/>
                <TextView
                    style="@style/edHist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/constHistEditAltura"/>
                <TextView
                    android:id="@+id/tvAlturaEdit"
                    style="@style/edHist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="altura"/>
                <TextView
                    style="@style/edHist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/constHistEditM"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#4A4A4A"
                android:orientation="horizontal">
                <TextView
                    style="@style/edHist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/constHistEditGenero"/>
                <TextView
                    android:id="@+id/tvGeneroEdit"
                    style="@style/edHist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="gen"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:background="#707070"
            android:orientation="vertical">
            <TextView
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/constHistEditObservacoes"/>
            <EditText
                android:id="@+id/etObservacaoEdit"
                android:hint="ex: Jejum X\nex: Dieta Y\nex: Exercício Z"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="136dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSalvarRegistro"
            android:text="@string/btnHistEditSalvar_registro"
            android:layout_marginTop="16dp"
            style="@style/btStyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnExcluirRegistro"
            android:onClick="onClickExcluirRegistro"
            android:text="@string/btnHistEditExcluir_registro"
            android:layout_marginTop="8dp"
            style="@style/btStyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
    <ProgressBar
        android:id="@+id/pbHistoricoEdit"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </ProgressBar>
</FrameLayout>